# messaging-system

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: publish.yml
docs/: crypto-design.md  primitive-decisions.md  trust-model.md
src/api/: Dockerfile  Program.cs  api.csproj
src/api/Config/: AppConfig.cs
src/api/Data/: AppDbContext.cs
src/api/Data/Entities/: Conversation.cs  ConversationDigest.cs  ConversationParticipant.cs  Message.cs  User.cs
src/api/Features/Auth/: AuthController.cs  AuthDtos.cs  AuthService.cs
src/api/Features/Blockchain/: BlockchainService.cs
src/api/Features/Conversation/: ConversationController.cs  ConversationDtos.cs  ConversationService.cs
src/api/Features/Message/: MessageController.cs  MessageDtos.cs  MessageService.cs
src/api/Features/RealTimeMessage/: ConnectionManager.cs  IncomingMessage.cs  MessageHandler.cs  RealTimeMessageExtensions.cs  RealTimeMiddleware.cs  TokenHelper.cs
src/api/Features/User/: UserController.cs  UserDtos.cs  UserService.cs
src/api/Migrations/: 20260520202224_InitialCreate.Designer.cs  20260520202224_InitialCreate.cs  20260523200655_AddSigningKeysAndMessageSignature.Designer.cs  20260523200655_AddSigningKeysAndMessageSignature.cs  AppDbContextModelSnapshot.cs
src/api/Profiles/: MappingProfile.cs
src/contracts/: MessageDigest.sol
src/cpp-client/: CMakeLists.txt
src/cpp-client/include/: Client.h  Conversation.h  KeyStore.h  Message.h  MessageStore.h  User.h  WebSocketClient.h
src/cpp-client/src/: Client.cpp  KeyStore.cpp  WebSocketClient.cpp  main.cpp
src/web-client/: index.html
test/: api.http
